fix toolbar z-index, refactor duplicate code

--- a/packages/v4/patternfly-docs/pages/componentGallery.css
+++ b/packages/v4/patternfly-docs/pages/componentGallery.css
@@ -10,7 +10,7 @@
   border-bottom: var(--pf-c-page__sidebar--m-light--BorderRightWidth) solid var(--pf-c-page__sidebar--m-light--BorderRightColor);
   margin-bottom: var(--pf-global--spacer--md);
   width: calc(100% + var(--pf-c-page__main-section--PaddingLeft));
-  z-index: 101;
+  z-index: 102;
 }
 
 .ws-component-gallery .pf-c-toolbar .pf-c-toolbar__content {
